multiple file logic, some refactoring

--- a/Shawbot/App.config
+++ b/Shawbot/App.config
@@ -14,7 +14,7 @@
             <setting name="Fileno" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="Lastline" serializeAs="String">
+            <setting name="Lineno" serializeAs="String">
                 <value>0</value>
             </setting>
         </Shawbot.Properties.Settings>
