--- a/Shawbot/Properties/Settings.settings
+++ b/Shawbot/Properties/Settings.settings
@@ -5,7 +5,7 @@
     <Setting Name="Fileno" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="Lastline" Type="System.Int32" Scope="User">
+    <Setting Name="Lineno" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
